- Modified: key binding for the ``bm-next`` command: instead of ``<f2>`` it is
  now ``<f2> <f2>``. It is not difficult to remember and type and restore
  access to Emacs default key bindings to the 2C-two-columns,
  2C-associate-buffer and 2C-split commands.
- Renamed: ``pel-imenu-dbg-print-vars`` to ``pel-imenu-print-vars`` for consistency.
** New Features and Improvements:
- New key bindings for activating outline modes:  the ``<f11> M-l`` key sequence is now bound
  to *outline-minor-mode* and ``<f11> M-L`` is bound to *outline-mode*.
- New: key bindings for the outline minor mode under the ``<f2>`` key
  prefix. These key bindings use only an extra key that does not require modifier.
  Also added binding to the *pel-outline-print-vars* command to
  ``<f2> ?`` and   ``<f11> ? e o``.  The info shown describes how the outline mode
  extracts the information for outlining purpose.
- New: add support for rfc-mode when the *pel-use-rfc-mode* user-option is
  turned on.  Provides ``<f11> B r`` binding to ``rfc-mode-read`` and
  ``<f11> B R`` to ``rfc-mode-browse``.
- New: key binding to the *pel-help-pdf-select* command used to access PEL
  local or web-based PDF help pages: ``<f11> M-?``.
- New: key binding ``<f11> M-.`` to *pel-syntax-at-point* command that also
  list the text properties of the character at point identified by the new
  *pel-syntax-text-properties* user-option.
- New: The ``C-x g`` key binding for Magit is no longer replaced by PEL's
  ``<f11> v g`` key binding for the *magit-status* command: both bindings are
  active when Magit is available.
- New: *pel-vcs-toggle-vc-log* command, bound to ``<f11> v l``.
  Toggle the logging of VC back-end commands in the `*pel-vc-log*` buffer.
- New: [[https://raw.githubusercontent.com/pierre-rouleau/pel/master/doc/pdf/vcs-git.pdf][⅀ VCS-Git 𝔛Magit PDF]]
- New: key prefix ``<f11> d e R`` for the ediff-registry commands.
- New: support for the built-in ``smerge-mode`` activated by the new *pel-use-smerge*